# Proyecto-Arquitectura

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  main_oas.cpp  main_soa.cpp
aos/: imageaos.cpp  imageaos.h
common/: progargs.cpp  progargs.h
soa/: imagesoa.cpp  imagesoa.h
src/: CMakeLists.txt  main_aos.cpp  main_oas.cpp  main_soa.cpp
src/aos/: imageaos.cpp  imageaos.h
src/common/: aux_functions.cpp  aux_functions.h  progargs.cpp  progargs.h
src/soa/: imagesoa.cpp  imagesoa.h
test/aos/: imageaos_test.cpp
